Fix some spacings

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
     </nav>
     <section class="feature-section">
         <div class="feature-text">
-            <h1 class="feature-title">See your <span class="underlined">desired future</span> with</h1>
-            <h1 class="feature-title">our cinematic software</h1>
-            <p class="feature-description">— Syntask is the very first AI-driven software that helps you to craft</p>
-            <p class="feature-description">your videos faster & cheaper while maintaining the highest quality</p></p>
+            <div class="feature-heading">
+                <h1 class="feature-title">See your <span class="underlined">desired future</span> with</h1>
+                <h1 class="feature-title">our cinematic software</h1>
+            </div>
+            <div  class="feature-description-container">
+                <p class="feature-description">— Syntask is the very first AI-driven software that helps you to craft</p>
+                <p class="feature-description">your videos faster & cheaper while maintaining the highest quality</p>
+            </div>
         </div>
         <div class="feature-button">
             <button class="play-button">Play Our Showreel</button>
