Refactor and add some details

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <nav class="navbar">
         <ul class="navbar-menu">
-            <li class="navbar-item">Capture</li>
-            <li class="navbar-icon"><i class="fas fa-bars"></i></li>
+            <li class="navbar-item"><a href="">Capture<span>®</span></a></li>
+            <li class="navbar-icon"><a href=""><i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
     <section class="feature-section">
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="feature-button">
-            <button class="play-button">Play Our Showreel</button>
+            <button class="play-button"><a href="">Play Our Showreel</a></button>
         </div>
     </section>
     <section class="image-section">
